--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,9 @@ readme = "README.md"
 packages = [{include = "nass_io"}]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.12.6"
 requests = "^2.32.3"
+beautifulsoup4 = "^4.12.3"
 
 
 [tool.poetry.group.dev.dependencies]
