--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "nass_io"}]
 
 [tool.poetry.dependencies]
-python = "^3.12.6"
+python = ">=3.12.6,<3.13"
 requests = "^2.32.3"
 beautifulsoup4 = "^4.12.3"
 
