--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "nass_io"}]
 python = ">=3.12.6,<3.13"
 requests = "^2.32.3"
 beautifulsoup4 = "^4.12.3"
+rich = "^13.9.4"
 
 
 [tool.poetry.group.dev.dependencies]
